fix(notice): dark mode for page notice ds6 and section notice ds6 & ds4

--- a/src/less/section-notice/base/section-notice.less
+++ b/src/less/section-notice/base/section-notice.less
@@ -96,9 +96,12 @@
     .skin-experiment-dark-mode {
         .section-notice {
             --section-notice-default-background-color: @color-background-default-dark-mode;
-            --section-notice-attention-background-color: #191f1b;
-            --section-notice-confirmation-background-color: #1b2027;
-            --section-notice-information-background-color: #2a191c;
+            --section-notice-attention-background-color: #393939;
+            --section-notice-confirmation-background-color: #393939;
+            --section-notice-information-background-color: #393939;
+            --section-notice-color: #dcdcdc;
+
+            color: #dcdcdc;
         }
     }
 }
